--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js",
+    "build": "echo \"Skipping build step for Vercel deployment\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "chess.js": "^1.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "process": "^0.11.10",
     "socket.io": "^4.8.1"
   }
 }
